--- a/gui/menuPrincipal.ui
+++ b/gui/menuPrincipal.ui
@@ -25,9 +25,9 @@
      <colorrole role="Button">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>220</red>
-        <green>220</green>
-        <blue>220</blue>
+        <red>189</red>
+        <green>223</green>
+        <blue>223</blue>
        </color>
       </brush>
      </colorrole>
@@ -43,27 +43,27 @@
      <colorrole role="Midlight">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>237</red>
-        <green>237</green>
-        <blue>237</blue>
+        <red>222</red>
+        <green>239</green>
+        <blue>239</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Dark">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>110</red>
-        <green>110</green>
-        <blue>110</blue>
+        <red>94</red>
+        <green>111</green>
+        <blue>111</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Mid">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>147</red>
-        <green>147</green>
-        <blue>147</blue>
+        <red>126</red>
+        <green>149</green>
+        <blue>149</blue>
        </color>
       </brush>
      </colorrole>
@@ -106,9 +106,9 @@
      <colorrole role="Window">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>220</red>
-        <green>220</green>
-        <blue>220</blue>
+        <red>189</red>
+        <green>223</green>
+        <blue>223</blue>
        </color>
       </brush>
      </colorrole>
@@ -124,9 +124,9 @@
      <colorrole role="AlternateBase">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>237</red>
-        <green>237</green>
-        <blue>237</blue>
+        <red>222</red>
+        <green>239</green>
+        <blue>239</blue>
        </color>
       </brush>
      </colorrole>
@@ -162,9 +162,9 @@
      <colorrole role="Button">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>220</red>
-        <green>220</green>
-        <blue>220</blue>
+        <red>189</red>
+        <green>223</green>
+        <blue>223</blue>
        </color>
       </brush>
      </colorrole>
@@ -180,27 +180,27 @@
      <colorrole role="Midlight">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>237</red>
-        <green>237</green>
-        <blue>237</blue>
+        <red>222</red>
+        <green>239</green>
+        <blue>239</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Dark">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>110</red>
-        <green>110</green>
-        <blue>110</blue>
+        <red>94</red>
+        <green>111</green>
+        <blue>111</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Mid">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>147</red>
-        <green>147</green>
-        <blue>147</blue>
+        <red>126</red>
+        <green>149</green>
+        <blue>149</blue>
        </color>
       </brush>
      </colorrole>
@@ -243,9 +243,9 @@
      <colorrole role="Window">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>220</red>
-        <green>220</green>
-        <blue>220</blue>
+        <red>189</red>
+        <green>223</green>
+        <blue>223</blue>
        </color>
       </brush>
      </colorrole>
@@ -261,9 +261,9 @@
      <colorrole role="AlternateBase">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>237</red>
-        <green>237</green>
-        <blue>237</blue>
+        <red>222</red>
+        <green>239</green>
+        <blue>239</blue>
        </color>
       </brush>
      </colorrole>
@@ -290,18 +290,18 @@
      <colorrole role="WindowText">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>110</red>
-        <green>110</green>
-        <blue>110</blue>
+        <red>94</red>
+        <green>111</green>
+        <blue>111</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Button">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>220</red>
-        <green>220</green>
-        <blue>220</blue>
+        <red>189</red>
+        <green>223</green>
+        <blue>223</blue>
        </color>
       </brush>
      </colorrole>
@@ -317,36 +317,36 @@
      <colorrole role="Midlight">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>237</red>
-        <green>237</green>
-        <blue>237</blue>
+        <red>222</red>
+        <green>239</green>
+        <blue>239</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Dark">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>110</red>
-        <green>110</green>
-        <blue>110</blue>
+        <red>94</red>
+        <green>111</green>
+        <blue>111</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Mid">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>147</red>
-        <green>147</green>
-        <blue>147</blue>
+        <red>126</red>
+        <green>149</green>
+        <blue>149</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Text">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>110</red>
-        <green>110</green>
-        <blue>110</blue>
+        <red>94</red>
+        <green>111</green>
+        <blue>111</blue>
        </color>
       </brush>
      </colorrole>
@@ -362,27 +362,27 @@
      <colorrole role="ButtonText">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>110</red>
-        <green>110</green>
-        <blue>110</blue>
+        <red>94</red>
+        <green>111</green>
+        <blue>111</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Base">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>220</red>
-        <green>220</green>
-        <blue>220</blue>
+        <red>189</red>
+        <green>223</green>
+        <blue>223</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Window">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>220</red>
-        <green>220</green>
-        <blue>220</blue>
+        <red>189</red>
+        <green>223</green>
+        <blue>223</blue>
        </color>
       </brush>
      </colorrole>
@@ -398,9 +398,9 @@
      <colorrole role="AlternateBase">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>220</red>
-        <green>220</green>
-        <blue>220</blue>
+        <red>189</red>
+        <green>223</green>
+        <blue>223</blue>
        </color>
       </brush>
      </colorrole>
@@ -444,7 +444,7 @@
         <property name="title">
          <string/>
         </property>
-        <layout class="QGridLayout" name="gridLayout" rowstretch="10,90">
+        <layout class="QGridLayout" name="gridLayout" rowstretch="10,100">
          <item row="0" column="4">
           <widget class="QPushButton" name="pushButton_usuarios">
            <property name="sizePolicy">
@@ -462,13 +462,12 @@
            </property>
            <property name="styleSheet">
             <string notr="true">#pushButton_usuarios{
-background-color:#37760D;
+background-color: #AF7AC5 ;
 color: #FFFFFF;
 }
 
 #pushButton_usuarios:hover{
-background-color:#5DB224;
-color: #000000;
+background-color:#D7BDE2;
 }</string>
            </property>
            <property name="text">
@@ -503,13 +502,13 @@ color: #000000;
            </property>
            <property name="styleSheet">
             <string notr="true">#pushButton_afiliados{
-background-color:#37760D;
-color: #FFFFFF;
+background-color:#5DADE2  ;
+color: #FFFFFF ; 
 }
 
 #pushButton_afiliados:hover{
-background-color:#5DB224;
-color: #000000;
+background-color:#AED6F1   ;
+color: #1B4F72 ;
 }</string>
            </property>
            <property name="text">
@@ -590,12 +589,12 @@ color: #000000;
            </property>
            <property name="styleSheet">
             <string notr="true">#pushButton_proveedores{
-background-color:#37760D;
-color: #FFFFFF;
+background-color:#F5B041 ;
+color: #FFFFFF ;
 }
 #pushButton_proveedores:hover{
-background-color:#5DB224;
-color: #000000;
+background-color:#FAD7A0;
+color: #784212 ;
 }</string>
            </property>
            <property name="text">
@@ -614,7 +613,7 @@ color: #000000;
           </widget>
          </item>
          <item row="0" column="3">
-          <widget class="QPushButton" name="pushButton_procesarArchivo">
+          <widget class="QPushButton" name="pushButton_procesador">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>0</horstretch>
@@ -629,14 +628,13 @@ color: #000000;
             </font>
            </property>
            <property name="styleSheet">
-            <string notr="true">#pushButton_procesarArchivo{
-background-color:#37760D;
+            <string notr="true">#pushButton_procesador{
+background-color:#99A3A4;
 color: #FFFFFF;
 }
 
-#pushButton_procesarArchivo:hover{
-background-color:#5DB224;
-color: #000000;
+#pushButton_procesador:hover{
+background-color:#D5DBDB ;
 }</string>
            </property>
            <property name="text">
